--- a/src/ui/src/components/visualizer/graph_edit.ng.html
+++ b/src/ui/src/components/visualizer/graph_edit.ng.html
@@ -31,7 +31,7 @@
       </button>
       <mat-progress-spinner
         diameter="24"
-        mode="determinate"
+        [mode]="executionProgress > 0 ? 'determinate' : 'indeterminate'"
         [value]="executionProgress"
         [ngStyle]="{ display: isProcessingExecuteRequest ? 'block' : 'none' }"
       ></mat-progress-spinner>
