--- a/src/ui/src/components/logging_dialog/logging_dialog.scss
+++ b/src/ui/src/components/logging_dialog/logging_dialog.scss
@@ -48,7 +48,7 @@
     margin-block: 0.5rem;
     background: #f5f5f5;
     color: black;
-    width: fit-content;
+    width: 100%;
 
     &[data-log-level="info"] {
       color: #01014f;
@@ -76,6 +76,11 @@
     }
 
     .log-message-message {
+      margin: 0;
+      white-space: pre-wrap;
+      word-break: break-word;
+      overflow-wrap: break-word;
+      tab-size: 4;
       font-family: ui-monospace, monospace;
     }
   }
