--- a/src/ui/src/components/logging_dialog/logging_dialog.scss
+++ b/src/ui/src/components/logging_dialog/logging_dialog.scss
@@ -33,7 +33,8 @@
 
 
 .dialog-content {
-  padding-bottom: 0;
+  padding: 0 1rem;
+  max-height: 100%;
 
   ul {
     margin: 0;
@@ -42,13 +43,12 @@
 
   li {
     list-style-type: none;
-    border-radius: 1rem;
-    border: solid thin currentColor;
-    padding: 0.5rem;
-    margin-block: 0.5rem;
+    padding: 0.2rem 0.5rem;
+    margin-block: 0.2rem;
     background: #f5f5f5;
     color: black;
     width: 100%;
+    box-sizing: border-box;
 
     &[data-log-level="info"] {
       color: #01014f;
@@ -73,6 +73,10 @@
 
     .log-message-timestamp {
       font-weight: bold;
+    }
+
+    .log-message-level {
+      display: flex;
     }
 
     .log-message-message {
