--- a/src/ui/src/components/visualizer/expandable_info_text.ng.html
+++ b/src/ui/src/components/visualizer/expandable_info_text.ng.html
@@ -121,7 +121,7 @@ limitations under the License.
         />
       }
     } @else if (hasCurModel() && editable?.input_type === 'grid') {
-      @for (item of splitEditableList(text); track $index) {
+      @for (item of splitEditableList(text, $any(editable)?.separator ?? 'x'); track $index) {
         <input
           [type]="item.type"
           [value]="item.value"
