--- a/src/ui/src/components/visualizer/expandable_info_text.scss
+++ b/src/ui/src/components/visualizer/expandable_info_text.scss
@@ -16,6 +16,8 @@
  * ==============================================================================
  */
 
+@use 'variables';
+
 :host {
   overflow: hidden;
 }
@@ -160,6 +162,42 @@
       width: 11px;
       height: 11px;
       font-weight: 700;
+    }
+  }
+
+  .percentage-meter {
+    --percentage: 0%;
+
+    display: inline-block;
+    position: relative;
+    border: solid thin #999;
+    border-radius: 4px;
+    font-size: 10px;
+    width: calc(100% - 12px);
+    height: 14px;
+    vertical-align: middle;
+
+    &::before,
+    &::after {
+      content: '(' attr(data-percentage) ')';
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      position: absolute;
+      inset: 0;
+      width: 100%;
+    }
+
+    &::before {
+      clip-path: inset(0 calc(100% - var(--percentage)) 0 0);
+      color: white;
+      background: variables.$selection-color;
+    }
+
+    &::after {
+      clip-path: inset(0 0 0 var(--percentage));
+      color: black;
+      background: white;
     }
   }
 }
