--- a/src/ui/src/components/visualizer/expandable_info_text.ng.html
+++ b/src/ui/src/components/visualizer/expandable_info_text.ng.html
@@ -111,7 +111,15 @@ limitations under the License.
               }
             }
           } @else {
-            {{text}}
+            @switch (displayType) {
+              @case ('memory') {
+                <div class="percentage-meter" [attr.data-percentage]="text + '%'" [style]="{ '--percentage': text + '%' }"></div>
+              }
+
+              @default {
+                {{text}}
+              }
+            }
           }
         </div>
       }
@@ -158,7 +166,15 @@ limitations under the License.
         }
       }
     } @else {
-      {{text}}
+      @switch (displayType) {
+        @case ('memory') {
+          <div class="percentage-meter" [attr.data-percentage]="text + '%'" [style]="{ '--percentage': text + '%' }"></div>
+        }
+
+        @default {
+          {{text}}
+        }
+      }
     }
   </div>
   <div class="icon-container toggle" (click)="handleToggleExpand($event)">
