feat: only show a percentage if the check passes

--- a/src/ui/src/components/visualizer/expandable_info_text.ng.html
+++ b/src/ui/src/components/visualizer/expandable_info_text.ng.html
@@ -168,7 +168,11 @@ limitations under the License.
     } @else {
       @switch (displayType) {
         @case ('memory') {
-          <div class="percentage-meter" [attr.data-percentage]="text + '%'" [style]="{ '--percentage': text + '%' }"></div>
+          @if (isPercentage(text)) {
+            <div class="percentage-meter" [attr.data-percentage]="formatPercentage(text)" [style]="{ '--percentage': formatPercentage(text) }"></div>
+          } @else {
+            {{text}}
+          }
         }
 
         @default {
