feat: only show a percentage if the check passes

--- a/src/ui/src/components/visualizer/expandable_info_text.ng.html
+++ b/src/ui/src/components/visualizer/expandable_info_text.ng.html
@@ -166,7 +166,19 @@ limitations under the License.
         }
       }
     } @else {
-      {{text}}
+      @switch (displayType) {
+        @case ('memory') {
+          @if (isPercentage(text)) {
+            <div class="percentage-meter" [attr.data-percentage]="formatPercentage(text)" [style]="{ '--percentage': formatPercentage(text) }"></div>
+          } @else {
+            {{text}}
+          }
+        }
+
+        @default {
+          {{text}}
+        }
+      }
     }
   </div>
   <div class="icon-container toggle" (click)="handleToggleExpand($event)">
