--- a/src/ui/src/components/visualizer/info_panel.ng.html
+++ b/src/ui/src/components/visualizer/info_panel.ng.html
@@ -55,6 +55,7 @@ limitations under the License.
                   <expandable-info-text
                       [text]="item.value" [type]="item.label"
                       [collectionLabel]="$any(curCollectionLabel)"
+                      [graphId]="$any(curModelGraphId)"
                       [nodeId]="$any(curSelectedNodeId)"
                       [bgColor]="item.bgColor || 'transparent'"
                       [textColor]="item.textColor || 'black'"
