feat: add named location and full location to expandable text

--- a/src/ui/src/components/visualizer/info_panel.ng.html
+++ b/src/ui/src/components/visualizer/info_panel.ng.html
@@ -56,7 +56,8 @@ limitations under the License.
                       [text]="item.value" [type]="item.label"
                       [collectionLabel]="$any(curCollectionLabel)"
                       [graphId]="$any(curModelGraphId)"
-                      [nodeId]="$any(curSelectedNodeId)"
+                      [nodeFullLocation]="$any(curSelectedNodeFullLocation)"
+                      [nodeFullLocation]="$any(curSelectedNodeNamedLocation)"
                       [bgColor]="item.bgColor || 'transparent'"
                       [textColor]="item.textColor || 'black'"
                       [editable]="item.editable"
