--- a/src/ui/src/components/visualizer/title_bar.ng.html
+++ b/src/ui/src/components/visualizer/title_bar.ng.html
@@ -31,7 +31,7 @@ limitations under the License.
 
     <div class="divider tighter-right"></div>
 
-    <graph-edit [appService]="appService"></graph-edit>
+    <graph-edit></graph-edit>
 
     <div class="divider tighter-right"></div>
 
