feat: keep track of text and override separately

--- a/src/ui/src/components/visualizer/expandable_info_text.ng.html
+++ b/src/ui/src/components/visualizer/expandable_info_text.ng.html
@@ -48,7 +48,7 @@ limitations under the License.
             </span>
           </div>
         }
-        <div class="monospace-content">{{text}}</div>
+        <div class="monospace-content">{{displayText}}</div>
       }
 
       @case ('namespace') {
@@ -75,14 +75,14 @@ limitations under the License.
             @switch (editable?.input_type) {
               @case ('value_list') {
                 <select (change)="handleTextChange($event)">
-                  @for (option of getEditableOptions(editable!, text); track $index) {
-                    <option [selected]="option === text">{{option}}</option>
+                  @for (option of getEditableOptions(editable!, displayText); track $index) {
+                    <option [selected]="option === displayText">{{option}}</option>
                   }
                 </select>
               }
 
               @case ('int_list') {
-                @for (item of splitEditableList(text); track $index) {
+                @for (item of splitEditableList(displayText); track $index) {
                   <input
                     [type]="item.type"
                     [value]="item.value"
@@ -96,7 +96,7 @@ limitations under the License.
               }
 
               @case ('grid') {
-                @for (item of splitEditableList(text, $any(editable)?.separator ?? 'x'); track $index) {
+                @for (item of splitEditableList(displayText, $any(editable)?.separator ?? 'x'); track $index) {
                   <input
                     [type]="item.type"
                     [value]="item.value"
@@ -113,11 +113,11 @@ limitations under the License.
           } @else {
             @switch (displayType) {
               @case ('memory') {
-                <div class="percentage-meter" [attr.data-percentage]="text + '%'" [style]="{ '--percentage': text + '%' }"></div>
+                <div class="percentage-meter" [attr.data-percentage]="displayText + '%'" [style]="{ '--percentage': displayText + '%' }"></div>
               }
 
               @default {
-                {{text}}
+                {{displayText}}
               }
             }
           }
@@ -130,14 +130,14 @@ limitations under the License.
       @switch (editable?.input_type) {
         @case ('value_list') {
           <select (change)="handleTextChange($event)">
-            @for (option of getEditableOptions(editable!, text); track $index) {
-              <option [selected]="option === text">{{option}}</option>
+            @for (option of getEditableOptions(editable!, displayText); track $index) {
+              <option [selected]="option === displayText">{{option}}</option>
             }
           </select>
         }
 
         @case ('int_list') {
-          @for (item of splitEditableList(text); track $index) {
+          @for (item of splitEditableList(displayText); track $index) {
             <input
               [type]="item.type"
               [value]="item.value"
@@ -151,7 +151,7 @@ limitations under the License.
         }
 
         @case ('grid') {
-          @for (item of splitEditableList(text, $any(editable)?.separator ?? 'x'); track $index) {
+          @for (item of splitEditableList(displayText, $any(editable)?.separator ?? 'x'); track $index) {
             <input
               [type]="item.type"
               [value]="item.value"
@@ -168,15 +168,15 @@ limitations under the License.
     } @else {
       @switch (displayType) {
         @case ('memory') {
-          @if (isPercentage(text)) {
-            <div class="percentage-meter" [attr.data-percentage]="formatPercentage(text)" [style]="{ '--percentage': formatPercentage(text) }"></div>
+          @if (isPercentage(displayText)) {
+            <div class="percentage-meter" [attr.data-percentage]="formatPercentage(displayText)" [style]="{ '--percentage': formatPercentage(displayText) }"></div>
           } @else {
-            {{text}}
+            {{displayText}}
           }
         }
 
         @default {
-          {{text}}
+          {{displayText}}
         }
       }
     }
