feat: update html to display override icon if it exists and was not uploaded

--- a/src/ui/src/components/visualizer/expandable_info_text.ng.html
+++ b/src/ui/src/components/visualizer/expandable_info_text.ng.html
@@ -18,11 +18,11 @@ limitations under the License.
 
 <div
   class="override-status"
-  [class.override-failed]="isOverrideDifferent"
-  [class.override-applied]="isOverrideApplied"
-  [matTooltip]="isOverrideDifferent ? 'Override was not applied' : 'Override was applied'"
+  [class.has-override]="hasOverride"
+  [class.override-uploded]="isOverrideUploded"
+  [matTooltip]="overrideTooltip"
 >
-  <mat-icon>{{isOverrideDifferent ? 'warning' : 'check_circle'}}</mat-icon>
+  <mat-icon>{{overrideIcon}}</mat-icon>
 </div>
 
 <div class="container" #container
