--- a/src/ui/src/components/visualizer/expandable_info_text.ng.html
+++ b/src/ui/src/components/visualizer/expandable_info_text.ng.html
@@ -19,7 +19,7 @@ limitations under the License.
 <div
   class="override-status"
   [class.has-override]="hasOverride"
-  [class.override-uploded]="isOverrideUploded"
+  [class.override-uploaded]="isOverrideUploded"
   [matTooltip]="overrideTooltip"
 >
   <mat-icon>{{overrideIcon}}</mat-icon>
