--- a/src/ui/src/components/execution_settings_dialog/execution_settings_dialog.ng.html
+++ b/src/ui/src/components/execution_settings_dialog/execution_settings_dialog.ng.html
@@ -17,35 +17,58 @@ limitations under the License.
 -->
 
 <div mat-dialog-title class="title-container">
-  <div class="title">Execution settings</div>
+  <div class="title">Execution Settings</div>
 </div>
 <div mat-dialog-content class="dialog-content">
   <div class="settings-container">
-    <div class="setting-item">
-      @if (optimizationPolicies.length > 1) {
-        <div class="mat-icon-container">
-          <label class="setting-label" for="optimization-policy-select">
-            Optimization Policy
+    @if (optimizationPolicies.length > 1) {
+      <div class="setting-item">
+        <div class="setting-label">
+          <label for="optimization-policy-select">Optimization Policy</label>
 
-            <div class="icon-container"
-                [bubble]="helpPopup"
-                [overlaySize]="helpPopupSize"
-                [overlayPositions]="helpPopupPosition"
-                [hoverDelayMs]="100">
-              <mat-icon>help_outline</mat-icon>
+          <div class="icon-container"
+              [bubble]="helpPopup"
+              [overlaySize]="helpPopupSize"
+              [overlayPositions]="helpPopupPosition"
+              [hoverDelayMs]="100">
+            <mat-icon>help_outline</mat-icon>
+          </div>
+          <ng-template #helpPopup>
+            <div class="model-explorer-settings-help-popup">
+              Optimization policies help fine tune the compiler optimization.
             </div>
-            <ng-template #helpPopup>
-              <div>
-              </div>
-            </ng-template>
-          </label>
-          <select (change)="handleClickSelectOptimizationPolicy($event)" id="optimization-policy-select">
-            @for (optimizationPolicy of optimizationPolicies; track $index) {
-              <option>{{optimizationPolicy}}</option>
-            }
-          </select>
+          </ng-template>
         </div>
-      }
+        <select (change)="handleClickSelectOptimizationPolicy($event)" id="optimization-policy-select">
+          @for (optimizationPolicy of optimizationPolicies; track $index) {
+            <option>{{optimizationPolicy}}</option>
+          }
+        </select>
+      </div>
+    }
+
+    <div class="setting-item">
+      <div class="setting-label">
+        <label for="gen-c-code-toggle">Generate C++ Code</label>
+
+        <div class="icon-container"
+            [bubble]="helpPopup"
+            [overlaySize]="helpPopupSize"
+            [overlayPositions]="helpPopupPosition"
+            [hoverDelayMs]="100">
+          <mat-icon>help_outline</mat-icon>
+        </div>
+        <ng-template #helpPopup>
+          <div class="model-explorer-settings-help-popup">
+            When executing the model, also generates C++ representation of the model.
+          </div>
+        </ng-template>
+      </div>
+
+      <ng-container>
+        <mat-slide-toggle [checked]="false">
+        </mat-slide-toggle>
+      </ng-container>
     </div>
   </div>
 </div>
