feat: add button to open execution settings

--- a/src/ui/src/components/visualizer/graph_edit.ng.html
+++ b/src/ui/src/components/visualizer/graph_edit.ng.html
@@ -29,6 +29,14 @@
 
   <button
     mat-icon-button
+    matTooltip="Execution Settings"
+    (click)="handleSettingsDialogOpen()"
+  >
+    <mat-icon>settings</mat-icon>
+  </button>
+
+  <button
+    mat-icon-button
     matTooltip="Log messages"
     (click)="handleLogDialogOpen()"
   >
