feat: add highlighter to dialog

--- a/src/ui/src/components/cpp_code_dialog/cpp_code_dialog.ng.html
+++ b/src/ui/src/components/cpp_code_dialog/cpp_code_dialog.ng.html
@@ -25,6 +25,7 @@ limitations under the License.
   </div>
 </div>
 <div mat-dialog-content class="dialog-content">
+  <cpp-highlighter [code]="data.code"></cpp-highlighter>
 </div>
 <div mat-dialog-actions align="end" class="buttons-container">
   <button mat-button mat-dialog-close>Close</button>
