feat: add highlighter loading

--- a/src/ui/src/components/cpp_highlighter/cpp_highlighter.ng.html
+++ b/src/ui/src/components/cpp_highlighter/cpp_highlighter.ng.html
@@ -16,5 +16,9 @@ limitations under the License.
 ==============================================================================
 -->
 
-<div [innerHTML]="renderedCode()">
+<div [hidden]="isHighlighterLoaded">
+    <p>Loading code highlighter...</p>
+    <progress></progress>
+</div>
+<div [hidden]="!isHighlighterLoaded" [innerHTML]="renderedCode()">
 </div>
