feat: add some css for syntax highlighting

--- a/src/ui/src/components/cpp_highlighter/cpp_highlighter.ng.html
+++ b/src/ui/src/components/cpp_highlighter/cpp_highlighter.ng.html
@@ -20,5 +20,5 @@ limitations under the License.
     <p>Loading code highlighter...</p>
     <progress></progress>
 </div>
-<div [hidden]="!isHighlighterLoaded" [innerHTML]="renderedCode()">
+<div class="highlighted-code-container" [hidden]="!isHighlighterLoaded" [innerHTML]="renderedCode()">
 </div>
