feat: add badge for override icons

--- a/src/ui/src/components/visualizer/title_bar.ng.html
+++ b/src/ui/src/components/visualizer/title_bar.ng.html
@@ -29,14 +29,14 @@ limitations under the License.
 
     <graph-selector></graph-selector>
 
-    <div class="divider tighter-right"></div>
+    <div class="divider"></div>
 
     <graph-edit
         [appService]="appService"
         [nodeDataProviderExtensionService]="nodeDataProviderExtensionService"
     ></graph-edit>
 
-    <div class="divider tighter-right"></div>
+    <div class="divider"></div>
 
     <node-styler></node-styler>
 
