--- a/src/ui/src/components/visualizer/graph_edit.scss
+++ b/src/ui/src/components/visualizer/graph_edit.scss
@@ -8,4 +8,42 @@
   label {
     margin-inline-end: 1em;
   }
+
+  .divider {
+    width: 1px;
+    height: 28px;
+    border-left: 1px solid #ccc;
+    margin: 0 16px;
+  }
+
+  button[mat-icon-button].composite-icon {
+    --badge-size: 0.7rem;
+    --mask-size: 0.8rem;
+    --badge-offset: 1rem;
+
+    position: relative;
+    display: grid;
+    place-items: center;
+
+    mat-icon:nth-of-type(1) {
+      mask-image: radial-gradient(
+        circle at bottom right,
+        transparent,
+        transparent var(--mask-size),
+        black var(--mask-size),
+        black
+      );
+    }
+
+    mat-icon:nth-of-type(2) {
+      position: absolute;
+      display: block;
+      font-size: var(--badge-size);
+      margin-left: var(--badge-offset);
+      margin-top: var(--badge-offset);
+      pointer-events: none;
+      width: var(--badge-size);
+      height: var(--badge-size);
+    }
+  }
 }
