feat: add styling to inputs

--- a/src/ui/src/components/visualizer/expandable_info_text.ng.html
+++ b/src/ui/src/components/visualizer/expandable_info_text.ng.html
@@ -29,6 +29,8 @@ limitations under the License.
     [class.has-bg-color]="hasBgColor"
     [class.has-overflow]="hasOverflow"
     [class.has-multiple-lines]="hasMultipleLines"
+    [class.has-override]="hasOverride"
+    [class.override-uploaded]="isOverrideUploded"
     [class.expanded]="expanded"
     (click)="handleToggleExpand($event, true)">
   <div class="expanded-text">
