feat: update cpp button from hidden to disabled

--- a/src/ui/src/components/visualizer/graph_edit.ng.html
+++ b/src/ui/src/components/visualizer/graph_edit.ng.html
@@ -53,7 +53,7 @@
 
   <button
     mat-icon-button
-    [hidden]="!curCppCode"
+    [disabled]="!curCppCode"
     matTooltip="View Generated Cpp Code"
     (click)="handleCppDialogOpen()"
   >
