--- a/src/ui/src/components/visualizer/expandable_info_text.ng.html
+++ b/src/ui/src/components/visualizer/expandable_info_text.ng.html
@@ -79,11 +79,15 @@ limitations under the License.
       }
 
       @default {
-        <div class="text-content">
+        <div
+          class="text-content"
+          (input)="handleTextChange($event)"
+          (change)="handleTextChange($event)"
+        >
           @if (hasCurModel() && editable?.input_type) {
             @switch (editable?.input_type) {
               @case ('value_list') {
-                <select (change)="handleTextChange($event)">
+                <select>
                   @for (option of getEditableOptions(editable!, displayText); track $index) {
                     <option [selected]="option === displayText">{{option}}</option>
                   }
@@ -99,7 +103,6 @@ limitations under the License.
                     [step]="$any(editable)?.step ?? 1"
                     [min]="$any(editable)?.min_value ?? 0"
                     [max]="$any(editable)?.max_value ?? maxIntValue"
-                    (change)="handleTextChange($event)"
                   />
                 }
               }
@@ -113,7 +116,6 @@ limitations under the License.
                     [step]="$any(editable)?.step ?? 1"
                     [min]="$any(editable)?.min_value ?? 0"
                     [max]="$any(editable)?.max_value ?? maxIntValue"
-                    (change)="handleTextChange($event)"
                   />
                   <span class="text-separator">&nbsp;{{$any(editable)?.separator ?? 'x'}}&nbsp;</span>
                 }
