--- a/src/ui/src/components/visualizer/info_panel.ng.html
+++ b/src/ui/src/components/visualizer/info_panel.ng.html
@@ -57,7 +57,7 @@ limitations under the License.
                       [collectionLabel]="$any(curCollectionLabel)"
                       [graphId]="$any(curModelGraphId)"
                       [nodeFullLocation]="$any(curSelectedNodeFullLocation)"
-                      [nodeFullLocation]="$any(curSelectedNodeNamedLocation)"
+                      [nodeNamedLocation]="$any(curSelectedNodeNamedLocation)"
                       [bgColor]="item.bgColor || 'transparent'"
                       [textColor]="item.textColor || 'black'"
                       [editable]="item.editable"
