--- a/src/ui/src/components/visualizer/expandable_info_text.scss
+++ b/src/ui/src/components/visualizer/expandable_info_text.scss
@@ -20,6 +20,22 @@
 
 :host {
   overflow: hidden;
+  display: flex;
+  align-items: center;
+  gap: 0.3rem;
+}
+
+.override-status {
+  --override-status-color: transparent;
+
+  font-size: 1rem;
+  width: 1rem;
+  height: 1rem;
+  color: var(--override-status-color);
+
+  &.override-uploaded { --override-status-color: seagreen; }
+  &.has-override { --override-status-color: goldenrod; }
+  &.has-override.override-uploaded { --override-status-color: orangered; }
 }
 
 .container {
@@ -27,6 +43,7 @@
   display: flex;
   align-items: flex-start;
   position: relative;
+  flex-grow: 1;
 
   &.has-overflow,
   &.has-multiple-lines {
@@ -122,6 +139,9 @@
   }
 
   .one-line-text {
+    --input-color: black;
+    --input-bg: white;
+
     flex-grow: 1;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -130,12 +150,32 @@
     .text-separator:last-child {
       display: none;
     }
+
+    & :is(select, input) {
+      border: thin solid currentColor;
+      border-radius: 3px;
+      background-color: var(--input-bg);
+      color: var(--input-color);
+    }
   }
 
   .text-content {
     .text-separator:last-child {
       display: none;
     }
+  }
+
+  &.override-uploaded .one-line-text {
+    --input-color: darkgreen;
+    --input-bg: lightgreen;
+  }
+  &.has-override .one-line-text {
+    --input-color: darkgoldenrod;
+    --input-bg: lightyellow;
+  }
+  &.has-override.override-uploaded .one-line-text {
+    --input-color: maroon;
+    --input-bg: lightpink;
   }
 
   .expanded-text {
