--- a/src/ui/src/components/visualizer/graph_edit.ng.html
+++ b/src/ui/src/components/visualizer/graph_edit.ng.html
@@ -1,11 +1,27 @@
 <div class="container">
-  @if (hasCurModel) {
-    <div class="mat-icon-container">
-      <button mat-icon-button matTooltip="Upload processed graphs json to server" (click)="handleClickUploadGraph()" [disabled]="!hasOverrides || isProcessingExecuteRequest()">
-        <mat-icon>upload</mat-icon>
-      </button>
-    </div>
-  }
+  <button
+    class="composite-icon"
+    mat-icon-button
+    matTooltip="Download current overrides"
+    (click)="handleDownloadOverrides()"
+    [disabled]="!hasCurModel || !hasOverrides || graphHasErrors"
+  >
+    <mat-icon color="red">download</mat-icon>
+    <mat-icon color="blue">handyman</mat-icon>
+  </button>
+  <button
+    class="composite-icon"
+    mat-icon-button
+    matTooltip="Upload new overrides"
+    (click)="uploadInput.click()"
+    [disabled]="!hasCurModel || graphHasErrors"
+  >
+    <mat-icon>upload</mat-icon>
+    <mat-icon>handyman</mat-icon>
+  </button>
+  <input hidden type="file" #uploadInput (change)="handleUploadOverrides(uploadInput)">
+
+  <div class="divider"></div>
 
   @if (hasCurModel) {
     <div class="mat-icon-container">
@@ -37,7 +53,7 @@
 
   <button
     mat-icon-button
-    [hidden]="!curCppCode"
+    [disabled]="!curCppCode"
     matTooltip="View Generated Cpp Code"
     (click)="handleCppDialogOpen()"
   >
