--- a/src/ui/src/components/visualizer/expandable_info_text.ng.html
+++ b/src/ui/src/components/visualizer/expandable_info_text.ng.html
@@ -156,6 +156,7 @@ limitations under the License.
               [step]="$any(editable)?.step ?? 1"
               [min]="$any(editable)?.min_value ?? 0"
               [max]="$any(editable)?.max_value ?? maxIntValue"
+              (input)="handleTextChange($event)"
               (change)="handleTextChange($event)"
             />
           }
@@ -170,6 +171,7 @@ limitations under the License.
               [step]="$any(editable)?.step ?? 1"
               [min]="$any(editable)?.min_value ?? 0"
               [max]="$any(editable)?.max_value ?? maxIntValue"
+              (input)="handleTextChange($event)"
               (change)="handleTextChange($event)"
             />
             <span class="text-separator">&nbsp;{{$any(editable)?.separator ?? 'x'}}&nbsp;</span>
