fix: show selected optimization policy

--- a/src/ui/src/components/execution_settings_dialog/execution_settings_dialog.ng.html
+++ b/src/ui/src/components/execution_settings_dialog/execution_settings_dialog.ng.html
@@ -41,7 +41,7 @@ limitations under the License.
         </div>
         <select (change)="handleUpdateOptimizationPolicy($event)" id="optimization-policy-select">
           @for (optimizationPolicy of optimizationPolicies; track $index) {
-            <option>{{optimizationPolicy}}</option>
+            <option [selected]="selectedOptimizationPolicy === optimizationPolicy">{{optimizationPolicy}}</option>
           }
         </select>
       </div>
