--- a/src/ui/src/components/visualizer/attr_tree_view/attr_tree_view.scss
+++ b/src/ui/src/components/visualizer/attr_tree_view/attr_tree_view.scss
@@ -75,6 +75,13 @@ details {
   text-overflow: ellipsis;
   min-width: 120px;
   flex-shrink: 0;
+  
+  // For leaf nodes (simple attributes), match original styling
+  .leaf-node & {
+    color: #999;
+    font-weight: normal;
+    min-width: 100px;
+  }
 }
 
 .attr-value {
@@ -93,6 +100,21 @@ details {
   &:hover {
     background-color: #e8f0fe;
     border-color: #1a73e8;
+  }
+  
+  // For leaf nodes (simple attributes), match original styling
+  .leaf-node & {
+    background-color: transparent;
+    border: none;
+    padding: 0;
+    font-family: inherit;
+    font-size: 12px;
+    color: #202124;
+    
+    &:hover {
+      background-color: transparent;
+      border: none;
+    }
   }
 }
 
@@ -172,12 +194,29 @@ details {
   
   .attr-key {
     color: #8ab4f8;
+    
+    // For leaf nodes in dark theme
+    .leaf-node & {
+      color: #9aa0a6;
+    }
   }
   
   .attr-value {
     color: #e8eaed;
     background-color: #2d2e30;
     border-color: #5f6368;
+    
+    // For leaf nodes in dark theme
+    .leaf-node & {
+      background-color: transparent;
+      border: none;
+      color: #e8eaed;
+      
+      &:hover {
+        background-color: transparent;
+        border: none;
+      }
+    }
   }
   
   .attr-value-empty {
